--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -434,6 +434,11 @@
       ul {
         padding-left: 25px;
         padding-top: 10px;
+        li{
+          &:last-child{
+            padding-bottom: 0;
+          }
+        }
       }
     }
     /* Tag Cloud Widget */
