--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -336,6 +336,8 @@ input.theme-btn{
       border-radius: 6px;
       color: $black-2;
       font-size: 16px;
+      @include transition;
+
     }
   }
 }
